# docs/swagger.json
@@ -12,7 +12,7 @@
     "host": "https://yourforwarder.io",
     "basePath": "/api/v1",
     "paths": {
-        "/users": {
+        "/strategies": {
             "get": {
                 "security": [
                     {
@@ -27,7 +27,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "users"
+                    "strategies"
                 ],
                 "summary": "Get all strategies",
                 "responses": {
@@ -38,6 +38,90 @@
                             "items": {
                                 "$ref": "#/definitions/types.Strategy"
                             }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Create a new strategy for the current user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "strategies"
+                ],
+                "summary": "Create a new strategy",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/types.Strategy"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "security": [
+                    {
+                        "BasicAuth": []
+                    }
+                ],
+                "description": "Get the current user, can be used to verify the user exists",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Get the current user",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
                         }
                     },
                     "401": {
@@ -153,6 +237,9 @@
             "properties": {
                 "diff": {
                     "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
                 }
             }
         },
@@ -161,17 +248,26 @@
             "properties": {
                 "diff": {
                     "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
                 }
             }
         },
         "types.Strategy": {
             "type": "object",
             "properties": {
+                "allowCounter": {
+                    "type": "boolean"
+                },
                 "entires": {
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/types.Entry"
                     }
+                },
+                "id": {
+                    "type": "integer"
                 },
                 "sl": {
                     "$ref": "#/definitions/types.SL"
@@ -189,6 +285,9 @@
             "properties": {
                 "diff": {
                     "type": "number"
+                },
+                "strategyID": {
+                    "type": "integer"
                 }
             }
         },
